<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">钻展透视</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_nick">酷宝数据</string>
    <string name="dome_num">--</string>
    <string name="dome_time">11-11 11:11</string>
    <string name="demo_price">￥: --.-</string>
    <string name="home">首页</string>
    <string name="baobei">宝贝</string>
    <string name="more">更多</string>
    <string name="trade">订单</string>
    <string name="lateSql">钻展数据于订购次日11:00送达</string>
    <string name="user_name">掌柜名称：XXXX</string>
    <string name="shop_name">店铺名称：XXXX</string>
    <string name="pv_str">到达页浏览量</string>
    <string name="uv_str">访客数</string>
    <string name="gmv_str">成交金额：</string>
    <string name="payment_str">成交金额</string>
    <string name="pre_str">客单价</string>
    <string name="convert_str">成交转化率</string>
    <string name="shop_fav_str">店铺收藏数</string>
    <string name="baobei_fav_str">宝贝收藏数</string>
    <string name="achieve_baobei_str">成交宝贝数：</string>
    <string name="baobei_sales_str">宝贝销量：</string>
    <string name="today_fav_str">今日收藏数：</string>
    <string name="unachieve_baobei_str">未成交宝贝数：</string>
    <string name="cart_str">加入购物车人数</string>
    <string name="pat_str">拍下订单数：</string>
    <string name="achieve_user_str">成交人数：</string>
    <string name="achieve_trade_str">成交订单数：</string>
    <string name="more_shop_name">韩都衣舍旗舰店</string>
    <string name="more_end_time">到期时间：2013-10-31</string>
    <string name="choice_date">2013-11-13</string>
    <string name="pat_time">拍下时间：</string>
    <string name="achieve_time">成交时间：</string>
    <string name="baobei_num">宝贝数量：</string>
    <string name="trade_payment">实付款：</string>
    <string name="look_more">查看更多宝贝</string>
    <string name="baobei_title">这是一个很长很长很长很长的宝贝标题</string>
    <string name="order_num">2件</string>
    <string name="baobei_sku">SKU：</string>
    <string name="baobei_pv">PU：</string>
    <string name="baobei_uv">VU：</string>
    <string name="baobei_fov">收藏数：</string>
    <string name="baobei_sales">销量：</string>
    <string name="link_relative">环比</string>
    <string name="subscribe">软件订购</string>
    <string name="phone_call">电话联系: 0571-87853991</string>
    <string name="login_status">注销登录</string>
    <string name="yester">过去7天数据</string>
    <string name="tongqi">上周同期数据</string>
    <string name="trade_baobeis">成交宝贝数：</string>
    <string name="trade_nums">宝贝销量：</string>
    <string name="item_fovs">宝贝收藏数：</string>
    <string name="no_trade_nums">未成交宝贝数：</string>
    <string name="loadmore">加载更多</string>
    <string name="load_footer_hint_ready">松开载入更多</string>
    <string name="order_title">查看子订单</string>
    <string name="tao_nick">淘宝帐号：</string>
    <string name="password">用户密码：</string>
    <string name="letsgo">立即登录</string>
    <string name="findpas">忘记密码？</string>
    <string name="newuser">新用户请先登录</string>
    <string name="datestr">2013年11月29日周五</string>
    <string name="sure">确定</string>
    <string name="cancl">取消</string>
    <string name="auth_go">去授权</string>
    <string name="datechoice">日期</string>
    <string name="acount_tis">淘宝帐号</string>
    <string name="psd_tis">订购应用获得的密码</string>
    <string name="tips_warnning">温馨提示</string>
    <string name="tips_completed">帐号或者密码为空，请填写完整！</string>
    <string name="tips_msg">用户名或密码出错，或者您的帐号未授权本软件，密码可通过重新授权获取。</string>
    <string name="loading_msg">光速加载中...</string>
    <string name="usersub_msg">软件即将到期，请重新续订！</string>
    <string name="scan_title">扫描二维码登录</string>
</resources>