<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ContentActivity" >
	
    <RelativeLayout
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/navigation" >
        
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/normal_white"
            android:textSize="@dimen/title_font_size"
            android:text="@string/user_nick" />

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/msg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head_layout"
        android:background="@android:color/darker_gray" >
        
        <TextView
            android:id="@+id/msg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/normal_white"
            android:text="@string/usersub_msg" />

    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/footer_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg"
        android:padding="0dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_btn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/footer_btn"
            android:text="@string/home"
            android:textColor="#F0FFFF"
            android:textSize="@dimen/button_font_size"
             style="@android:style/ButtonBar" >
        </Button>
        <Button
            android:id="@+id/baobei_btn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/footer_btn"
            android:text="@string/baobei"
            android:textColor="#F0FFFF"
            android:textSize="@dimen/button_font_size"
             style="@android:style/ButtonBar"  >
        </Button>
        <Button
            android:id="@+id/trade_btn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/footer_btn"
            android:text="@string/trade"
            android:textColor="#F0FFFF"
            android:textSize="@dimen/button_font_size"
            style="@android:style/ButtonBar"  >
        </Button>
        <Button
            android:id="@+id/more_btn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/footer_btn"
            android:text="@string/more"
            android:textColor="#F0FFFF"
            android:textSize="@dimen/button_font_size"
             style="@android:style/ButtonBar"  >
        </Button>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/content_layout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer_layout"
        android:layout_below="@+id/msg_layout"
        android:background="#F0FFFF" >
    </android.support.v4.view.ViewPager>

</RelativeLayout>