<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/fourh_rax" >

        <ImageView
            android:id="@+id/bb_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/nobb" />

        <TextView
            android:id="@+id/bb_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/bb_pic"
            android:layout_marginLeft="10dp"
            android:maxLines="2"
            android:maxWidth="140dp"
            android:text="@string/baobei_title"
            android:textColor="@color/select_bule" />

        <TextView
            android:id="@+id/bb_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/order_num"
            android:textColor="@color/select_bule" />
    </RelativeLayout>

</RelativeLayout>