<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/trade" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginLeft="1dp"
            android:background="@drawable/trade_lable" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/pat_time"
                    android:textColor="@color/normal_white" />

                <TextView
                    android:id="@+id/pat_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dome_time"
                    android:textColor="@color/normal_white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/achieve_time"
                    android:textColor="@color/normal_white" />

                <TextView
                    android:id="@+id/achieve_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/dome_time"
                    android:textColor="@color/normal_white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/trade_tl" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/baobei_num"
            android:textColor="@color/select_bule" />

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView2"
            android:text="@string/dome_num"
            android:textColor="@color/select_bule" />

        <TextView
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="26dp"
            android:text="@string/dome_num"
            android:textColor="@color/select_bule" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/payment"
            android:text="@string/trade_payment"
            android:textColor="@color/select_bule" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/single_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/threeline"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/bb_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/nobb" />

        <TextView
            android:id="@+id/bb_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/bb_pic"
            android:maxLines="2"
            android:maxWidth="140dp"
            android:text="@string/baobei_title"
            android:textColor="@color/select_bule" />

        <TextView
            android:id="@+id/bb_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/order_num"
            android:textColor="@color/select_bule" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/two_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/threeline"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/two_bb_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/nobb" />

        <TextView
            android:id="@+id/two_bb_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/two_bb_pic"
            android:maxLines="2"
            android:maxWidth="140dp"
            android:text="@string/baobei_title"
            android:textColor="@color/select_bule" />

        <TextView
            android:id="@+id/two_bb_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:text="@string/order_num"
            android:textColor="@color/select_bule" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/trade_tl" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/look_more"
            android:textColor="@color/select_bule"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/right_arrow" />
    </RelativeLayout>

</LinearLayout>